--- a/animal.css
+++ b/animal.css
@@ -1,6 +1,6 @@
 
 main{
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Findet_Nemo', sans-serif;
     padding: 25px;
     width: 100%
     height: 100% 
@@ -14,21 +14,21 @@ main{
 
 .title{
     text-align: center;
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Findet_Nemo', sans-serif;
     font-size: 40px;
     color: white;
 }
 
 .specs{
     text-align: center;
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Findet_Nemo', sans-serif;
     font-size: 25px;
     color: white;
 }
 
 .quote{
     text-align: center;
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Findet_Nemo', sans-serif;
     font-size: 20px;
     color: white;
 }
