--- a/animal.css
+++ b/animal.css
@@ -1,34 +1,34 @@
 
 main{
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 25px;
-    width: 100%
-    height: 100% 
+    width: 100%;
+    height: 100%;
 }
 
 .surround{
     background-image:url("https://img.wallpapersafari.com/tablet/2560/1700/23/38/5nCS1D.jpg");
-    width: 100%
-    height: 100%
+    width: 100%;
+    height: 100%;
 }
 
 .title{
     text-align: center;
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; sans-serif;
     font-size: 40px;
     color: white;
 }
 
 .specs{
     text-align: center;
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; sans-serif;
     font-size: 25px;
     color: white;
 }
 
 .quote{
     text-align: center;
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;, sans-serif;
     font-size: 20px;
     color: white;
 }
