--- a/nigel.css
+++ b/nigel.css
@@ -1,99 +1,100 @@
-main{
-    font-family: "Gill Sans", sans-serif;
-    padding: 25px;
-    width: 100%
-    height: 100% 
+main {
+  font-family: "Gill Sans", sans-serif;
+  padding: 25px;
+  width: 100%;
+  height: 100%;
 }
 
-.surround{
-    background-image:url("https://img.wallpapersafari.com/tablet/2560/1700/23/38/5nCS1D.jpg");
-    background-size: cover;
-    width: 100%;
-    height: 100%;
+.surround {
+  background-image: url("bg.jpeg");
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
-.title{
-    text-align: center;
-    font-family: "Gill Sans", sans-serif;
-    font-size: 40px;
-    color: white;
+.title {
+  text-align: center;
+  font-family: "Gill Sans", sans-serif;
+  font-size: 40px;
+  color: white;
 }
 
-.specs{
-    text-align: center;
-    font-family: "Gill Sans", sans-serif;
-    font-size: 25px;
-    color: white;
+.specs {
+  text-align: center;
+  font-family: "Gill Sans", sans-serif;
+  font-size: 25px;
+  color: white;
 }
 
-.quote{
-    text-align: center;
-    font-family: "Gill Sans", sans-serif;
-    font-size: 20px;
-    color: white;
-}
-input{
-    margin: .4rem;
+.quote {
+  text-align: center;
+  font-family: "Gill Sans", sans-serif;
+  font-size: 20px;
+  color: white;
 }
 
-header{
-    padding: 15px;
-    width: 100%
+input {
+  margin: 0.4rem;
 }
 
-.img1{
-    padding-top: 30px;
-    padding-left: 25px;
-    width: 50%;
-    float:right;
-    border-radius: 50%;
+header {
+  padding: 15px;
+  width: 100%;
 }
 
-.blurb{
-    color: rgb(255, 153, 51);
-    font-size: 20px;
+.img1 {
+  /* padding-top: 10px; */
+  padding-left: 20px;
+  width: 50%;
+  float: right;
+  border-radius: 30%;
+}
+
+.blurb {
+  color: rgb(255, 153, 51);
+  font-size: 20px;
+}
+
+.highlightme {
+  background-color: #b0dee7;
 }
 
 .box3 {
-    width: 300px;
-    margin: 50px auto;
-    border-radius: 15px;
-    background: #F9FEFF;
-    color: #000000;
-    padding: 20px;
-    text-align: center;
-    font-weight: 900;
-    position: relative;
-  }
+  width: 300px;
+  margin: 50px auto;
+  border-radius: 15px;
+  background: #b0dee7;
+  color: #000000;
+  padding: 20px;
+  text-align: center;
+  font-weight: 900;
+  position: relative;
+}
 
-  .sb13:before {
-    content: "";
-    width: 0px;
-    height: 0px;
-    position: absolute;
-    border-left: 15px solid #F9FEFF;
-    border-right: 15px solid transparent;
-    border-top: 15px solid #F9FEFF;
-    border-bottom: 15px solid transparent;
-    right: -16px;
-    top: 0px;
-  }
-  
-  .sb14:before {
-    content: "";
-    width: 0px;
-    height: 0px;
-    position: absolute;
-    border-left: 15px solid transparent;
-    border-right: 15px solid #F9FEFF;
-    border-top: 15px solid #F9FEFF;
-    border-bottom: 15px solid transparent;
-    left: -16px;
-    top: 0px;
-  }
+.sb13:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 15px solid #b0dee7;
+  border-right: 15px solid transparent;
+  border-top: 15px solid #b0dee7;
+  border-bottom: 15px solid transparent;
+  right: -16px;
+  top: 0px;
+}
 
-.btn-area{
-    text-align: center;
+.btn-area {
+  /* text-align: center;
     color: coral;
-    margin: 10px;
+    margin: 10px; */
+  text-align: center;
+  background-color: white;
+  font-family: "Gill Sans", sans-serif;
+  border-radius: 12px;
+  padding: 14px 40px;
+  font-size: 14px;
+  margin: 10px;
+  width: fit-content;
+  height: fit-content;
 }
