--- a/animal.css
+++ b/animal.css
@@ -1,6 +1,6 @@
 
 main{
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Gill Sans', sans-serif;
     padding: 25px;
     width: 100%
     height: 100% 
@@ -14,33 +14,30 @@ main{
 
 .title{
     text-align: center;
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Gill Sans', sans-serif;
     font-size: 40px;
     color: white;
 }
 
 .specs{
     text-align: center;
-    font-family: 'Findet Nemo', sans-serif;
+    font-family: 'Gill Sans', sans-serif;
     font-size: 25px;
     color: white;
 }
 
-.quote{
-    text-align: center;
-    font-family: 'Findet Nemo', sans-serif;
-    font-size: 20px;
-    color: white;
-}
 input{
     margin: .4rem;
 }
 
 header{
-    padding: 15px;
+    padding: 10px;
     width: 100%
 }
-
+.img2{
+    float:center;
+    margin-left: 35%;
+}
 .img1{
     padding-top: 30px;
     padding-left: 25px;
@@ -49,15 +46,52 @@ header{
     border-radius: 50%;
 }
 
-.blurb{
-    color: rgb(255, 153, 51);
+.box3 {
+    width: 300px;
+    margin: 50px auto;
+    border-radius: 15px;
+    background: #b0dee7;
+    color: #000000;
+    padding: 20px;
+    text-align: center;
+    font-weight: 900;
+    position: relative;
+  }
+  
+  .sb13:before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 15px solid #b0dee7;
+    border-right: 15px solid transparent;
+    border-top: 15px solid #b0dee7;
+    border-bottom: 15px solid transparent;
+    right: -16px;
+    top: 0px;
+    font-family: 'Gill Sans', sans-serif;
+  }
+
+.highlightme {
+    background-color: #b0dee7;
     font-size: 20px;
+    font-family: 'Gill Sans', sans-serif;;
 }
 
-.btn-area{
-    text-align: center;
+.btn-area {
+  /* text-align: center;
     color: coral;
-    margin: 10px;
+    margin: 10px; */
+  text-align: center;
+  background-color: white;
+  font-family: "Gill Sans", sans-serif;
+  border-radius: 12px;
+  padding: 14px 40px;
+  font-size: 14px;
+  margin: 10px;
+  margin-left: 45%;
+  width: fit-content;
+  height: fit-content;
 }
 
 
