--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://img.wallpapersafari.com/tablet/2560/1700/23/38/5nCS1D.jpg");
+  background-image: url(bg.jpeg);
   background-size: cover;
   text-align: center;
   font-family: "Gill Sans", sans-serif;
